Items 33-43: Remove ThreadGroup infrastructure and migrate all executors to virtual threads
Agent-Logs-Url: https://github.com/pfirmstone/JGDMS/sessions/03f72c18-5749-444e-ab4a-8ff67999d924

Co-authored-by: pfirmstone <11625778+pfirmstone@users.noreply.github.com>